# vector-twin

./: .env.example  .gitignore  Makefile  README.md  cloudbuild.yaml  docker-compose.yml  pyproject.toml
src/: settings.py
src/app/: Dockerfile  main.py  requirements.txt
src/embedding_generation/: pipeline.py
src/embedding_generation/steps/: __init__.py  embeddings.py
src/embedding_pipeline/: pipeline.py  requirements.txt  run.py  settings.py
src/embedding_pipeline/configs/: embedding_generation_local.yaml
src/embedding_pipeline/steps/: __init__.py  embedding_generation.py  hf_datasets.py
src/etl/: .dockerignore  run.py
src/etl/configs/: embedding_generation_local.yaml  embedding_generation_qdrant_cloud.yaml
src/etl/pipelines/: __init__.py  embedding_generation.py
src/etl/steps/: __init__.py  embeddings.py
src/vector_twin/: models.py  settings.py
src/vector_twin/qdrant/: __init__.py  client.py  utils.py
src/vector_twin/scripts/: create_zenml_secrets.py  delete_zenml_secrets.py
